<?xml version="1.0" encoding="utf-8"?>
<resources>

<!-- Common Words -->
	<string name="app_name">Craft Me A Pass !</string>
	<string name="empty"></string>
    <string name="logo_description">The Logo</string>
    <string name="options">Options</string>

<!-- Main Window -->
	<string name="who">Who?</string>
    <string name="where">Where?</string>
    <string name="key">Key</string>
    <string name="go_craft">Go Craft!</string>
    <string name="password_length">Password Length</string>
    <string name="password_type">Password Type</string>
    <string name="main_length_button">Length :</string>
    <string name="main_type_button">Type :</string>
    <string name="pass_settings">Password\'s settings</string>
    <string name="common_length">Common Pass Lengths</string>
    <string-array name="common_sizes">
        <item >4</item>
        <item >6</item>
        <item >8</item>
        <item >10</item>
        <item >12</item>
        <item >16</item>
    </string-array>
    <string name="crafting">Crafting&#8230;</string>
    
<!-- Result Window -->
	<string name="title_activity_result">Crafted Password</string>
	<string name="pass_window_title">Your Password</string>
	<string name="pass_copy_button">Copy</string>
	<string name="pass_label">Your password is :</string>
    
<!-- Menu -->
    <string name="settings">Settings</string>
    <string name="howto">How-To</string>
    <string name="clear_clipboard">Clear the clipboard</string>
    <string name="quit">Quit</string>
    
<!-- Settings -->
	<string name="punctuation">Punctuation</string>
	<string name="punctuation_summary">ex : "#~!</string>
    <string name="space">Space</string>
    <string name="space_summary"> </string>
	<string name="save">Save</string>
    <string name="size">Size</string>
    <string name="can_your_password_have">Can your password have&#8230;</string>
    <string name="length">Length</string>
    <string name="pass_length">Password Length</string>
    <string name="input_to_lowercase">Input to lowercase</string>
    <string name="input_to_lowercase_title">Convert input to lowercase</string>
    <string name="input_to_lowercase_summary">If Off, \"This\" and \"this\" will give you completely different passwords.</string>
    <string name="numbers">Numbers</string>
    <string name="uppercase_letters">Uppercase Letters</string>
    <string name="lowercase_letters">Lowercase Letters</string>
    <string name="conversion_settings">Conversion settings</string>
    <string name="pass_template">Password Template</string>
    <string name="use_old_algorithm">Use the old Algorithm</string>
    <string name="use_old_algorithm_summary">Bad Algorithm for the users of the Beta version</string>
    <string-array name="pass_type">
        <item >PIN Code</item>
        <item >Alphanumeric</item>
        <item >Only letters</item>
        <item >Strongest</item>
        <item >Other</item>
    </string-array>
    <string-array name="settings_list">
        <item >@string/lowercase_letters</item>
        <item >@string/uppercase_letters</item>
        <item >@string/numbers</item>
        <item >@string/punctuation</item>
        <item >@string/space</item>
        <item >@string/pass_length</item>
    </string-array>
    
    
    
    
    
    
<!-- How-to -->
	<string name="howto_title">How to Craft a Pass?</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="next">Next </string>
    <string name="copy_toast">Password Copied to the Clipboard</string>
	<string name="howto_who"> &#8212;&#8212;&#8212;&#8212; Who &#8212;&#8212;&#8212;&#8212;</string>
    <string name="howto_where"> &#8212;&#8212;&#8212;&#8212; Where &#8212;&#8212;&#8212;&#8212;</string>
    <string name="howto_key"> &#8212;&#8212;&#8212;&#8212; Key &#8212;&#8212;&#8212;&#8212;</string>
	<string-array name="howto_array">
    	<item >Hello and welcome to this password-crafting app.\n\n\t In a few steps I will show you how to craft a new password with that only you can find, and that you won\'t even have to remember !</item>
    	<item >1 - In the "Who" field, write a name for the person who is asking for a pass. It can be "Name", "FirstName Surname", "Nickname", etc..\nJust remember that you will have to put the exact same name to get your pass back the next time.</item>
    	<item >2 - In the "Where"" field, write a name for the place where you are registering. For instance, to register on facebook it can be "Facebook", "FB", "facebook.com" etc&#8230; \nOnce again, you will have to remember how you wrote it&#8230;</item>
    	<item >3 - In the "Key" field, write a word, a combination of words, or anything that is common to you. The password you\'ll get will be crypted with this word so choose carefully. It can be empty, one digit, one word, a whole book, your pick.</item>
    	<item >4 - Then, Click on that big green button. The app will then take you to your new password, generated from the information you gave it.</item>
    	<item >Now the next time you need your password, all you have to do is input the same information, and you will get it back.\nAlso, don\'t hesitate to play with the settings to match your needs. But remember : every change gives you a different pass&#8230;</item>
    </string-array>
	
	
	
	
	
	
	<string name="about_text">
	    Hi, and welcome to my app : Craft me a pass!
        \n\n\tNowadays, we all have multiple passwords that we have to remember for multiple sites. Many will choose easy passes (1234, password, etc&#8230;) and even keep the same pass, no matter the number of places where they registered.Moreover, sometimes they register for others (while setting up a WiFi router in your girlfriend\'s house etc&#8230;) and still use that same pass.
        \n\tThis app was made to counter that. It generates a pass that will be different for every site you want to register, without you having to remember all of them, needing another pass to access them, or stocking them anywhere but in your brain.
		\n\n\tHere is how it works :
		\n\n
		\n1-\t Put whatever suits the place you\'re registering on the best in the box called \"Where\" (ex : for Facebook : Facebook, facebook, fb, Facebook.com, etc&#8230;)
        \n2-\t Put whatever suite the person who\'s registering in the best in the box called \"Who\" (ex: your full name, your nickname, the way you want to be called, with caps, without, etc&#8230;)
        \n3-\t Choose a key, that is the thing that you\'ll have to remember. It can be hard, or easy, just remember that you have to keep this one in mind for the next time you want your pass.
        \n(3bis-\t Change the Settings to match the requirements for the place where you are registering)
        \n4-\t Press the \"Go Craft\" button. The app will give you a pass generated by the info you gave. You can also copy it so you dont have to type all the strange characters
        \n5-\t When you want to get the password again for the next time you log in, you enter the same infos in the app (or in the Web Version, or any other version for that matter) and it will give it back
        \n
        \nIMPORTANT : The application does not stock anything. That means even if your device gets hacked, nobody gets your passes or even the infos you input (except what is left in the Clipboard maybe but they won\'t know for which place you used it)
        \n\t That also means I have no way to give you back any password. Nothing is stocked. Just try the combinations that you can remember, and for the next time\&#8230; use a more simple pattern.
        \n
        \n(Hint : You have to choose a pattern, a way to put these infos. It can be simple (ex: Where = with a cap at the beginning, no space, no .com, .net, or any address \/ Who = Your full name with Caps at the beginning \/ Key = Your girlfriend\'s name), or tricky (A different key for the kind of site, different patterns if it is a site or something else, etc\&#8230;), but remember that this tool has been made to giving you a hard to find password without you having to remember all of it&#8230; Having to remember a bazillion patterns would most likely render the app uneffective)
		\n
        \nQuentin D. quentin\@devauchelle.eu
	</string>
	
	

</resources>
