<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 	xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/settings">
    <PreferenceCategory android:title="@string/can_your_password_have">
   	    <CheckBoxPreference 	android:key="@string/lowercase_letters"
	        				android:title="@string/lowercase_letters"			
	        				android:persistent="true"	        				android:defaultValue="true"/>
	    <CheckBoxPreference 	android:key="@string/uppercase_letters"
	        				android:title="@string/uppercase_letters"        	
	        				android:persistent="true"	        				android:defaultValue="true"/>
	    <CheckBoxPreference 	android:key="@string/numbers"
	        				android:title="@string/numbers"        				android:summary="@string/space_summary"
	        				android:persistent="true"	        				android:defaultValue="true"/>
	    <CheckBoxPreference 	android:key="@string/punctuation"
	        				android:title="@string/punctuation"    				android:summary="@string/punctuation_summary"
	        				android:persistent="true"	        				android:defaultValue="true"/>
	    <CheckBoxPreference 	android:key="@string/space"
	        				android:title="@string/space"        				android:summary="@string/space_summary"
	        				android:persistent="true"	        				android:defaultValue="true"/>
	    <EditTextPreference android:key="@string/pass_length"					android:inputType="number"			
    	       				android:title="@string/pass_length"					
	        				android:persistent="true"							android:defaultValue="8"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/conversion_settings">
    	<CheckBoxPreference 	android:key="@string/input_to_lowercase"
    	    				android:title="@string/input_to_lowercase"			android:summary="@string/input_to_lowercase_summary"
    	    				android:persistent="true"							android:defaultValue="true"	/>
    	<CheckBoxPreference 	android:key="@string/use_old_algorithm"
    	    				android:title="@string/use_old_algorithm"			android:summary="@string/use_old_algorithm_summary"
    	    				android:persistent="true"							android:defaultValue="false"	/>
    </PreferenceCategory>
    
</PreferenceScreen>