<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
		<item android:id="@+id/menu_howto_button"
		      android:title="@string/howto"
		      android:showAsAction="always"
		      android:visible="false"
		      android:icon="@drawable/ic_action_help" />
		<item android:id="@+id/menu_clear_clipboard"
		      android:title="@string/clear_clipboard"
		      android:showAsAction="collapseActionView"
		      android:orderInCategory="98"/>
		<item android:id="@+id/menu_settings"
    	      android:title="@string/settings"
    	      android:showAsAction="never"
    	      android:orderInCategory="99"/>
		<item android:id="@+id/menu_quit"
		      android:title="@string/quit"
		      android:showAsAction="collapseActionView"
			  android:orderInCategory="100"/>		
    	
			
</menu>