<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        
	    <CheckBox
	        android:id="@+id/settingsd_box_punctuation"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/punctuation"
	        android:layout_weight="0.5" />
	    
	    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        android:weightSum="100" >

        <TextView
            android:id="@+id/settingsd_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_weight="10"
            android:text="@string/size" />

        <EditText
            android:id="@+id/settingsd_size_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:layout_marginLeft="5dp"
            android:inputType="number"
            android:maxLength="5" />

    	</LinearLayout>
	    
	</LinearLayout>
	
    <CheckBox
        android:id="@+id/settingsd_box_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space" />

    

    <Button
        android:id="@+id/settingsd_save"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>