<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_margin="50dp">

	
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">
        
	    <CheckBox
	        android:id="@+id/settings_box_punctuation"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/punctuation"
	        android:layout_weight="0.5"
	        android:textColor="@color/white"/>
	    
	    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        android:weightSum="100" >

        <TextView
            android:id="@+id/settings_size_text"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_weight="10"
           android:textColor="@color/white"
            android:text="@string/size" />

        <EditText
            android:id="@+id/settings_size_edit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:layout_marginLeft="2dp"
            android:inputType="number"
            android:textColor="@color/white"
            android:maxLength="5" />

    	</LinearLayout>
	    
	</LinearLayout>
	
    <CheckBox
        android:id="@+id/settings_box_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space" 
        android:textColor="@color/white"/>

    

    <Button
        android:id="@+id/settings_save"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@drawable/default_button_selector"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>