<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical" 
    android:gravity="center">
    <TextView 
        android:id="@+id/pass_label"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pass_label"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/printed_pass"
        android:background="@drawable/borders"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="17dp"
        android:layout_marginLeft="20dp"			android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/empty"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/pass_copy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        style="@style/DefaultButton"
        android:text="@string/pass_copy_button"
        android:visibility="invisible" />

</LinearLayout>